// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InboxPage InboxItem matches snapshot of order 1`] = `
<div
  className="item"
>
  <div
    className="itemAvatar"
  >
    <a
      className="root"
      href="/u/provider-user-id"
      onClick={[Function]}
      onMouseOver={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      title="provider-user-id display name"
    >
      <span
        className="initials"
      >
        TT
      </span>
    </a>
  </div>
  <a
    className="itemLink"
    href="/order/order-1"
    onClick={[Function]}
    onMouseOver={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
    title={null}
  >
    <div
      className="rowNotificationDot"
    />
    <div
      className="itemUsername"
    >
      <span
        className=""
      >
        provider-user-id display name
      </span>
    </div>
    <div
      className="itemTitle"
    >
      ItemX title
    </div>
    <div
      className="itemDetails"
    />
    <div
      className="itemState"
    >
      <div
        className="stateName stateNoActionNeeded"
      >
        <span>
          InboxPage.default-buying-products.purchased.status
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`InboxPage InboxItem matches snapshot of sales 1`] = `
<div
  className="item"
>
  <div
    className="itemAvatar"
  >
    <a
      className="root"
      href="/u/customer-user-id"
      onClick={[Function]}
      onMouseOver={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      title="customer-user-id display name"
    >
      <span
        className="initials"
      >
        TT
      </span>
    </a>
  </div>
  <a
    className="itemLink"
    href="/sale/sale-1"
    onClick={[Function]}
    onMouseOver={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
    title={null}
  >
    <div
      className="rowNotificationDot"
    >
      <div
        className="notificationDot"
      />
    </div>
    <div
      className="itemUsername"
    >
      <span
        className=""
      >
        customer-user-id display name
      </span>
    </div>
    <div
      className="itemTitle"
    >
      ItemX title
    </div>
    <div
      className="itemDetails"
    />
    <div
      className="itemState"
    >
      <div
        className="stateName stateActionNeeded"
      >
        <span>
          InboxPage.default-buying-products.purchased.status
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`InboxPage InboxPageComponent matches snapshot of order 1`] = `
<Page
  scrollingDisabled={false}
  title="InboxPage.ordersTitle"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        className="topbar"
        currentPage="InboxPage"
        desktopClassName="desktopTopbar"
        mobileRootClassName="mobileTopbar"
      />
    </LayoutWrapperTopbar>
    <LayoutWrapperSideNav
      className="navigation"
      rootClassName={null}
      tabs={null}
    >
      <h1
        className="title"
      >
        <MemoizedFormattedMessage
          id="InboxPage.title"
        />
      </h1>
      <TabNav
        className={null}
        rootClassName="tabs"
        tabClassName={null}
        tabRootClassName="tab"
        tabs={
          Array [
            Object {
              "linkProps": Object {
                "name": "InboxPage",
                "params": Object {
                  "tab": "orders",
                },
              },
              "selected": true,
              "text": <span>
                <Memo(MemoizedFormattedMessage)
                  id="InboxPage.ordersTabTitle"
                />
              </span>,
            },
            Object {
              "linkProps": Object {
                "name": "InboxPage",
                "params": Object {
                  "tab": "sales",
                },
              },
              "selected": false,
              "text": <span>
                <Memo(MemoizedFormattedMessage)
                  id="InboxPage.salesTabTitle"
                />
              </span>,
            },
          ]
        }
      />
    </LayoutWrapperSideNav>
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <ul
        className="itemList"
      >
        <li
          className="listItem"
          key="order-1"
        >
          <InboxItem
            intl={
              Object {
                "formatDate": [Function],
                "formatDateTimeRange": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelativeTime": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            isBooking={false}
            stateData={
              Object {
                "processName": "default-buying-products",
                "processState": "purchased",
              }
            }
            transactionRole="customer"
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/confirm-payment",
                  "lastTransitionedAt": 2017-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/item",
                      "includeFor": Array [
                        "customer",
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "includeFor": Array [
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "_sdkType": "Money",
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "_sdkType": "Money",
                    "amount": 900,
                    "currency": "USD",
                  },
                  "processName": "default-buying-products",
                  "processVersion": 1,
                  "transitions": Array [
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:00.000Z,
                      "transition": "transition/request-payment",
                    },
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:01.000Z,
                      "transition": "transition/confirm-payment",
                    },
                  ],
                },
                "booking": null,
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "order-1",
                },
                "listing": Object {
                  "attributes": Object {
                    "deleted": false,
                    "description": "ItemX description",
                    "geolocation": LatLng {
                      "_sdkType": "LatLng",
                      "lat": 40,
                      "lng": 60,
                    },
                    "price": Money {
                      "_sdkType": "Money",
                      "amount": 5500,
                      "currency": "USD",
                    },
                    "publicData": Object {
                      "transactionProcessAlias": "default-buying-products",
                      "transactionType": "sell-bikes",
                      "unitType": "item",
                    },
                    "state": "published",
                    "title": "ItemX title",
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "ItemX",
                  },
                  "type": "listing",
                },
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "reviews": Array [],
                "type": "transaction",
              }
            }
          />
        </li>
        <li
          className="listItem"
          key="order-2"
        >
          <InboxItem
            intl={
              Object {
                "formatDate": [Function],
                "formatDateTimeRange": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelativeTime": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            isBooking={false}
            stateData={
              Object {
                "processName": "default-buying-products",
                "processState": "purchased",
              }
            }
            transactionRole="customer"
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/confirm-payment",
                  "lastTransitionedAt": 2016-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/item",
                      "includeFor": Array [
                        "customer",
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "includeFor": Array [
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "_sdkType": "Money",
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "_sdkType": "Money",
                    "amount": 900,
                    "currency": "USD",
                  },
                  "processName": "default-buying-products",
                  "processVersion": 1,
                  "transitions": Array [
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:00.000Z,
                      "transition": "transition/request-payment",
                    },
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:01.000Z,
                      "transition": "transition/confirm-payment",
                    },
                  ],
                },
                "booking": null,
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "order-2",
                },
                "listing": Object {
                  "attributes": Object {
                    "deleted": false,
                    "description": "ItemX description",
                    "geolocation": LatLng {
                      "_sdkType": "LatLng",
                      "lat": 40,
                      "lng": 60,
                    },
                    "price": Money {
                      "_sdkType": "Money",
                      "amount": 5500,
                      "currency": "USD",
                    },
                    "publicData": Object {
                      "transactionProcessAlias": "default-buying-products",
                      "transactionType": "sell-bikes",
                      "unitType": "item",
                    },
                    "state": "published",
                    "title": "ItemX title",
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "ItemX",
                  },
                  "type": "listing",
                },
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "reviews": Array [],
                "type": "transaction",
              }
            }
          />
        </li>
      </ul>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;

exports[`InboxPage InboxPageComponent matches snapshot of sales 1`] = `
<Page
  scrollingDisabled={false}
  title="InboxPage.salesTitle"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        className="topbar"
        currentPage="InboxPage"
        desktopClassName="desktopTopbar"
        mobileRootClassName="mobileTopbar"
      />
    </LayoutWrapperTopbar>
    <LayoutWrapperSideNav
      className="navigation"
      rootClassName={null}
      tabs={null}
    >
      <h1
        className="title"
      >
        <MemoizedFormattedMessage
          id="InboxPage.title"
        />
      </h1>
      <TabNav
        className={null}
        rootClassName="tabs"
        tabClassName={null}
        tabRootClassName="tab"
        tabs={
          Array [
            Object {
              "linkProps": Object {
                "name": "InboxPage",
                "params": Object {
                  "tab": "orders",
                },
              },
              "selected": false,
              "text": <span>
                <Memo(MemoizedFormattedMessage)
                  id="InboxPage.ordersTabTitle"
                />
              </span>,
            },
            Object {
              "linkProps": Object {
                "name": "InboxPage",
                "params": Object {
                  "tab": "sales",
                },
              },
              "selected": true,
              "text": <span>
                <Memo(MemoizedFormattedMessage)
                  id="InboxPage.salesTabTitle"
                />
              </span>,
            },
          ]
        }
      />
    </LayoutWrapperSideNav>
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <ul
        className="itemList"
      >
        <li
          className="listItem"
          key="sale-1"
        >
          <InboxItem
            intl={
              Object {
                "formatDate": [Function],
                "formatDateTimeRange": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelativeTime": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            isBooking={false}
            stateData={
              Object {
                "actionNeeded": true,
                "isSaleNotification": true,
                "processName": "default-buying-products",
                "processState": "purchased",
              }
            }
            transactionRole="provider"
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/confirm-payment",
                  "lastTransitionedAt": 2017-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/item",
                      "includeFor": Array [
                        "customer",
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "includeFor": Array [
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "_sdkType": "Money",
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "_sdkType": "Money",
                    "amount": 900,
                    "currency": "USD",
                  },
                  "processName": "default-buying-products",
                  "processVersion": 1,
                  "transitions": Array [
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:00.000Z,
                      "transition": "transition/request-payment",
                    },
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:01.000Z,
                      "transition": "transition/confirm-payment",
                    },
                  ],
                },
                "booking": null,
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "sale-1",
                },
                "listing": Object {
                  "attributes": Object {
                    "deleted": false,
                    "description": "ItemX description",
                    "geolocation": LatLng {
                      "_sdkType": "LatLng",
                      "lat": 40,
                      "lng": 60,
                    },
                    "price": Money {
                      "_sdkType": "Money",
                      "amount": 5500,
                      "currency": "USD",
                    },
                    "publicData": Object {
                      "transactionProcessAlias": "default-buying-products",
                      "transactionType": "sell-bikes",
                      "unitType": "item",
                    },
                    "state": "published",
                    "title": "ItemX title",
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "ItemX",
                  },
                  "type": "listing",
                },
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "reviews": Array [],
                "type": "transaction",
              }
            }
          />
        </li>
        <li
          className="listItem"
          key="sale-2"
        >
          <InboxItem
            intl={
              Object {
                "formatDate": [Function],
                "formatDateTimeRange": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelativeTime": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            isBooking={false}
            stateData={
              Object {
                "actionNeeded": true,
                "isSaleNotification": true,
                "processName": "default-buying-products",
                "processState": "purchased",
              }
            }
            transactionRole="provider"
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/confirm-payment",
                  "lastTransitionedAt": 2016-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/item",
                      "includeFor": Array [
                        "customer",
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "includeFor": Array [
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "_sdkType": "Money",
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "_sdkType": "Money",
                    "amount": 900,
                    "currency": "USD",
                  },
                  "processName": "default-buying-products",
                  "processVersion": 1,
                  "transitions": Array [
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:00.000Z,
                      "transition": "transition/request-payment",
                    },
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:01.000Z,
                      "transition": "transition/confirm-payment",
                    },
                  ],
                },
                "booking": null,
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "sale-2",
                },
                "listing": Object {
                  "attributes": Object {
                    "deleted": false,
                    "description": "ItemX description",
                    "geolocation": LatLng {
                      "_sdkType": "LatLng",
                      "lat": 40,
                      "lng": 60,
                    },
                    "price": Money {
                      "_sdkType": "Money",
                      "amount": 5500,
                      "currency": "USD",
                    },
                    "publicData": Object {
                      "transactionProcessAlias": "default-buying-products",
                      "transactionType": "sell-bikes",
                      "unitType": "item",
                    },
                    "state": "published",
                    "title": "ItemX title",
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "ItemX",
                  },
                  "type": "listing",
                },
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "reviews": Array [],
                "type": "transaction",
              }
            }
          />
        </li>
      </ul>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;
